kubernetes/apps/nextcloud/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 6379
      from:
        - podSelector:
            matchLabels:
              app: nextcloud
        - podSelector:
            matchLabels:
              app: nextcloud-cron
